--- a/JwtDemoSite/JwtDemoSite.csproj
+++ b/JwtDemoSite/JwtDemoSite.csproj
@@ -109,20 +109,25 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\JWTController.cs" />
+    <Compile Include="Enums\TokenAlg.cs" />
+    <Compile Include="Extension\MyExtension.cs" />
     <Compile Include="Factory\ModuleFactory.cs" />
     <Compile Include="Filters\JWTAuthAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helper\JWTHelper.cs" />
     <Compile Include="Models\APIResult.cs" />
     <Compile Include="Models\LoginForm.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Modules\Token\Implement\RsaTokenModule.cs" />
     <Compile Include="Modules\Implement\SystemAuthorityModule.cs" />
+    <Compile Include="Modules\Token\Implement\HmacTokenModule.cs" />
     <Compile Include="Modules\Implement\UserModule.cs" />
     <Compile Include="Modules\ISystemAuthorityModule.cs" />
+    <Compile Include="Modules\Token\ITokenModule.cs" />
     <Compile Include="Modules\IUserModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource\JwtProviderResource.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -136,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Helper\Implement\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
