--- a/JwtDemoSiteTests/JwtDemoSiteTests.csproj
+++ b/JwtDemoSiteTests/JwtDemoSiteTests.csproj
@@ -57,7 +57,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Helper\JWTHelperTests.cs" />
+    <Compile Include="Modules\RsaTokenModuleTests.cs" />
+    <Compile Include="Modules\HmacTokenTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiTest.cs" />
   </ItemGroup>
